# VirtuosoConsole

./: .gitignore  .gitmodules  BaseLog.h  CMakeLists.txt  ConsoleFormatting.h  DynamicVariable.h  GameConsole.cpp  GameConsole.h  GameConsole.tcc  IMGUIQuakeConsole.h  LICENSE  QuakeStyleConsole.h  README.md  SimpleLog.h  WindowedQueue.h  todo.txt
demos/: CMakeLists.txt  consoleTest.cpp  file2.txt  guiTest.cpp
demos/Depends/Virtuoso/GL/: GLFWApplication.h  ImGUIRenderer.h  ShaderProgramLib.h  TextureLoader.h
test/: CMakeLists.txt  TestCommands.txt  main.cpp
